# 2DGameFramework

./: .gitignore  2DGameFramework.sln  CMakeLists.txt  README.md
2DGameFramework/: 2DGameFramework.vcxproj
Framework/: Framework.vcxproj  Framework.vcxproj.filters
Framework/config/: GameConfig.json
Framework/scripts/: assets_copy.py
Framework/src/: CompCamera.cpp  CompCamera.h  CompGuid.cpp  CompGuid.h  CompRenderer.cpp  CompRenderer.h  CompTransform.cpp  CompTransform.h  Component.h  ComponentType.h  Entity.cpp  Entity.h  EntityFactory.cpp  Game.cpp  Game.h  GameSetting.h  IRender.h  Main.cpp  Noncopyable.h  Player.cpp  Player.h  Util.hpp
Framework/src/Component/: Component.h  ComponentTypeGetter.h
Framework/src/Component/Impl/: CompRenderer.h  CompTransform.h
Framework/src/Entity/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h
Framework/src/Game/: Game.cpp  RuntimeIdManager.h
artifacts/config/: GameConfig.json  GlobalSetting.json  LevelSetting.json  PlayerSetting.json  SpineSetting.json
assets/spine/player/: player.atlas
config/: AnimationSetting.json  GlobalSetting.json  LevelMap.txt  MonsterSetting.json  PlayerSetting.json  SpineSetting.json
scripts/: assets_copy.py  config_copy.py
src/: GlobalDefine.h  Main.cpp  Monster.cpp  Monster.h  Player.h  RuntimeIdManager.cpp
src/AI/: Tactic.cpp  Tactic.h  TacticDirectChasing.cpp  TacticDirectChasing.h
src/Animation/: AnimTransCheckState.cpp  AnimTransCheckState.h  AnimTransCheckTrigger.cpp  Animator.cpp  Animator.h
src/Animation/Condition/: AnimTransCheckTrigger.cpp
src/Animation/Transition/: AnimationTransition.h
src/Animation/Transition/Condition/: AnimTransCheckProgress.cpp  AnimTransCheckProgress.h  AnimTransCheckState.cpp  AnimTransCheckState.h  AnimTransCheckTrigger.h  AnimTransCheckValue.cpp  AnimTransCheckValue.h  AnimTransCondition.h  AnimTransConditionFactory.cpp  AnimTransConditionFactory.h
src/Component/: Component.cpp  Component.h  ComponentType.h  ComponentTypeGetter.h
src/Component/Impl/: CompAi.cpp  CompAi.h  CompAnimator.cpp  CompAnimator.h  CompCamera.h  CompCollider.cpp  CompCollider.h  CompGuid.cpp  CompGuid.h  CompName.cpp  CompName.h  CompRender.cpp  CompRender.h  CompRenderer.cpp  CompRenderer.h  CompSpine.cpp  CompSpine.h  CompSprite.cpp  CompSprite.h  CompTransform.cpp  CompTransform.h
src/Config/: AnimationSetting.cpp  AnimationSetting.h  GlobalSetting.h  LevelSetting.h  MonsterSetting.h  PlayerSetting.h  SceneSetting.h  SpineSetting.h
src/Entity/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h
src/Game/: Game.cpp  Game.h  GameSetting.h  GlobalDefine.h
src/Game/Manager/: GameManager.h
src/Game/Manager/Impl/: ConfigManager.h  UserInputManager.h
src/Manager/: GameManager.cpp  GameManager.h  GameManagerType.h  GameManagerTypeGetter.h
src/Manager/Impl/: AiManager.cpp  AiManager.h  AnimationManager.cpp  AnimationManager.h  ConfigManager.cpp  ConfigManager.h  PhysicsManager.cpp  PhysicsManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  UserInputManager.cpp  UserInputManager.h
src/Map/: Map.cpp  Map.h
src/Render/: Camera.cpp  Camera.h
src/Spine/: SpineFactory.cpp  SpineFactory.h  SpineResData.h
src/Utility/: GuidGenerator.cpp  GuidGenerator.h  Logger.cpp  Logger.h  OrderedHashMap.hpp  Util.hpp
